--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -202,6 +202,11 @@ input, textarea{
     .active::after{
         display:none;
     }
+
+    /* .work{
+        margin-left: auto !important;
+        margin-right:auto !important;
+    } */
 }
 
 @media screen and (max-width:768px){
