--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -268,7 +268,7 @@ input, textarea{
 }
 
 
-@media screen and (min-width:315px) and (max-width:768px){
+@media screen and (min-width:315px) and (max-width:767px){
     .img_div, .img_div::before, .img_div::after, .aboutimg{
         width:275px !important;
     height:300px !important
@@ -277,5 +277,21 @@ input, textarea{
     .horimg{
         width:100%;
         height:100% !important;
+    }
+}
+
+@media screen and (min-width:768px) and (max-width:991px){
+    .img_divone{
+        margin-top:8rem !important;
+    }
+}
+
+@media screen and (max-width:312px){
+    .navbar-brand{
+        font-size: 1rem !important;
+    }
+    .navbar-toggler{
+        font-size:0.8rem !important;
+        padding:.1rem .4rem !important;
     }
 }
